vlib/v/checker/tests/blank_ident_invalid_use.out
vlib/v/checker/tests/blank_ident_invalid_use.vv:2:8: error: undefined ident: `_` (may only be used in assignments)
    1 | fn main() {
    2 |     _ := [_]
      |           ^
    3 | }
